fixed css z-index of ul menu  again

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,8 @@
  */
 
 
+
+
+.ui-field-contain.ui-body.ui-br {
+	z-index: -1;
+}
