--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -21,7 +21,7 @@ header#header {
 #header ul ul { /* Menu Item List */
   position: absolute; /* Position absolutely */
   display: none; /* Hide */
-  z-index: 500; /* Ensure visibility over other elements on page */
+  /*z-index: 500; /* Ensure visibility over other elements on page */
   margin-top: 0px; /* Bring menu closer to button; not needed on mobile */
 }
 #header ul ul li {
@@ -41,10 +41,10 @@ header#header {
 }
 
 .ui-bar-a .ui-shadow {
-	-webkit-box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.3);
-	-moz-box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.3);
-	box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.3);
-	
+  -webkit-box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.3);
+  -moz-box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 0px 0 rgba(255, 255, 255, 0.3);
+
 }
 
 #menu-right {
